@@ -1,3 +1,7 @@
+2013-06-25  Simon Cook  <simon.cook@embecosm.com>
+
+	* tag-release.sh: Use LINUXDIR environment variable.
+
 2013-06-20  Simon Cook  <simon.cook@embecosm.com>
 
 	* build-all.sh: Disable automatic patching of relative RPATHs.
